--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header{
     height: 20%;
     background-color: var(--bgcolor-secondary);
     padding: 2rem;
+    padding-left: 10rem;
 }
 
 figure h1,img{
@@ -53,11 +54,29 @@ figure h1{
     border-radius: 5px 5px 0 0;
 }
 
+.button_box button{
+    padding: 7px 14px;
+    border: none;
+    border-radius: 5px;
+}
+
+#selected{
+    background-color: var(--buttoncolor--selected);
+    color: var(--colortxt-secondary);
+}
+
+#unselected{
+    border: 1px solid var(--colortxt-tertiary);
+    color: var(--colortxt-tertiary);
+    background-color: var(--bgcolor-secondary);
+}
+
 /* task area styling */
 #task_area{
     width: 60%;
     margin: auto;
     margin-top: 0.25rem;
+    margin-bottom: 2rem;
     background-color: var(--bgcolor-secondary);
     padding: 2rem 3rem;
     border-radius: 0 0 5px 5px;
